--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -9,3 +9,9 @@ appTitle=PPA Planning
 appDescription=Tata BlueScope Steel: PPA Planning
 #XTIT: Main view title
 title=PPA Planning
+
+#XFLD,24
+flpTitle=Planning
+
+#XFLD,42
+flpSubtitle=by Distributor
